Include <config.h>. (#317444, Kazuki Iwamoto)
2005-09-28  Tor Lillqvist  <tml@novell.com>

	* modules/input/imime.c: Include <config.h>. (#317444, Kazuki
	Iwamoto)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-28  Tor Lillqvist  <tml@novell.com>
+
+	* modules/input/imime.c: Include <config.h>. (#317444, Kazuki
+	Iwamoto)
+
 2005-09-27  Federico Mena Quintero  <federico@ximian.com>
 
 	Don't reload the current folder unnecessarily on ::map().
