Change header too

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2005-09-28  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktexttag.h: 
 	* gtk/gtktexttag.c (gtk_text_attributes_ref): Return the attributes
 	to make this function work as boxed copy function.  (#317455,
 	Gustavo Carneiro)
