--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,11 @@
+2005-10-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf-animation.c (gdk_pixbuf_animation_new_from_file): 
+	* gdk-pixbuf-io.c (gdk_pixbuf_new_from_file): 
+	* gdk-pixbuf-loader.c: Use a 1k buffer for sniffing image formats,
+	instead of 128 or 256 bytes.  (#317225, Sebastien Bacher, 
+	Dom Lachowicz)
+
 2005-09-27  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.8.4 ===
