--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-03  Matthias Clasen <mclasen@redhat.com>
+
+	* pt.po: Apply a patch to remove context from 
+	translations.  (#317867, Duarte Henriques)
+
 2005-09-24  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
