--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-04  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkrc.c (gtk_rc_clear_realized_style): Revert the change
+	from yesterday, since it leads to assertion failures.  (#317879,
+	Sebastian Bacher)
+
 2005-10-03  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkcalendar.c (gtk_calendar_init): Call 
