Updated Vietnamese translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-05  pclouds <pclouds@gmail.com>
+
+	* vi.po: Updated Vietnamese translation
+	
 2005-10-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.8.6 ===
