--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-05  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkrc.c (gtk_rc_clear_realized_style): Readd the memory
+	leak fix, since the assertion failures were traced to 
+	an xchat bug.  (#314696)
+	
 	* gtk/gtkstyle.c (gtk_style_detach):
 	(gtk_style_attach):  Documentation improvements.
 	(gtk_style_detach): Assert that the attach_count is > 0.
