--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-07   Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktexttag.c (gtk_text_attributes_ref): Use
+	g_return_val_if_fail(), not g_return_if_fail().  (#318412,
+	Kazuki Iwamoto)
+
 2005-10-06  Matthias Clasen  <mclasen@redhat.com> 
 		
 	* gtk/gtk.symbols:
