--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,9 @@
 
 2005-10-07   Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfilechooserdefault.c: Properly fix the unistd.h include
+	by moving it out of the profiling ifdef.
+
 	* gtk/gtkfilechooserdefault.c: Remove a redundant (and
 	unconditional) include of unistd.h  (#318211, Kazuki Iwamoto)
 
