--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-09  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated italian translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
 2005-10-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.8.6 ===
