--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-12  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_write): Only call
+	gdk_pixbuf_loader_eat_header_write() when count > 0.  (#318589,
+	Bogdan Nicula)
+
 2005-10-03  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk-pixbuf-animation.c (gdk_pixbuf_animation_new_from_file): 
