--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-13  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-10-09  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated italian translation by
