--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-13  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-10-03  Matthias Clasen <mclasen@redhat.com>
 
 	* pt.po: Apply a patch to remove context from 
