--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-14  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Add a bunch of missing files.
+	* en_CA.po: Updated Canadian English translation.
+
 2005-10-13  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
