--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2005-10-14  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Add a bunch of files with translatable
+	  strings. Most of them don't concern us here, but they
+	  may someday.
+	* en_CA.po: Updated Canadian English translation.
+
 2005-10-13  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
