--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-15  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated.
+
 2005-10-14  Adam Weinberger  <adamw@gnome.org>
 
 	* POTFILES.in: Add a bunch of missing files.
